<resources>
    <string name="app_name">ShoppingList</string>
    <string name="action_settings">Settings</string>
    <string name="input_name_list">Введите название списка покупок.</string>
    <string name="create_list_button">Создать</string>
    <string name="cancel_button">Отмена</string>
    <string name="add_button">Добавить</string>
    <string name="name_product">Наименование покупки</string>
    <string name="list_share">Поделиться</string>
    <string name="list_copy">Копировать список</string>
    <string name="list_rename">Переименовать список</string>
    <string name="list_delete">Удалить список</string>
    <string name="do_you_delete_list">Удалить список ?</string>
    <string name="delete_button">Удалить</string>
    <string name="save_button">Сохранить</string>
</resources>
