<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/TextDialogList"
            android:id="@+id/deleteLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/do_you_delete_list"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnDelete"
            app:layout_constraintTop_toBottomOf="@id/deleteLabel"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/delete_button"/>

        <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnCancel"
            app:layout_constraintRight_toLeftOf="@id/btnDelete"
            app:layout_constraintTop_toBottomOf="@id/deleteLabel"

            android:text="@string/cancel_button"/>

    </android.support.constraint.ConstraintLayout>


</android.support.design.widget.CoordinatorLayout>
